--- a/plebeianmarket/templates/index.html
+++ b/plebeianmarket/templates/index.html
@@ -44,7 +44,7 @@
         </div>
 
         <div class="container content">
-        <h1>1. Start an auction now in just 3 steps</h1>
+        <h1>Start an auction now in just 3 steps</h1>
         <h2>1. Register as a seller</h2>
         <p>It's simple, completely anonymous, and free. We do not collect any data and we do not track you.</p>
         <p>All you need to do is to scan a QR code using a supported Lightning wallet and you are registered as a seller. We know absolutely nothing about you.</p>
@@ -52,9 +52,9 @@
         <p>Not only we don't know who you are, but we also don't know what you are selling. All we store is properties that we actually need to run the auction: a start date, and end date, a minimum bid, that sort of stuff.</p>
         <h2>3. Paste the code into your website</h2>
         <p>Whether you run Wordpress or just generate your site statically using tools like Jekyll, we've got you covered. We give you a short snippet you include on your listing's page.</p>
-        <h1>2. Run an auction on your own node</h1>
-        <p>Want to be fully self-sovereign? Run it yourself.</p>
-        <p>Coming soon on Umbrel and Start9.</p>
+        <h1>Coming soon</h1>
+        <li>Run it yourself on your Umbrel and Start9.</li>
+        <li>Coming soon on WordPress.</li>
         </div>
     </div>
 
