Add custom stylesheet.

--- a/plebeianmarket/templates/index.html
+++ b/plebeianmarket/templates/index.html
@@ -11,6 +11,7 @@
         <title>Plebeian Market</title>
 
         <link rel="stylesheet" href="/static/css/naringu.css">
+        <link rel="stylesheet" href="/static/css/style.css">
     </head>
 
 <body class="theme-6dd">
