--- a/client/static/css/style.css
+++ b/client/static/css/style.css
@@ -2,9 +2,143 @@ html,
 body {
   margin: 0;
   padding: 0;
-  border: 1px solid #FF00CC;
+  border: 0;
+  background-color: #555;
 }
 
-#qr {
-  background-color: white;
+.theme-plebeian-dark .sidebar,
+.theme-plebeian-dark .sidebar-toggle:active,
+.theme-plebeian-dark #sidebar-checkbox:checked ~ .sidebar-toggle {
+  background-color: #999;
+}
+
+.theme-plebeian-dark .container a,
+.theme-plebeian-dark .sidebar-toggle,
+.theme-plebeian-dark .related-posts li a:hover {
+  color: #FF00CC;
+}
+
+#top-menu {
+  text-align: right;
+}
+
+.btn-white {
+  border:solid 2px #fff;
+  background: transparent;
+  color: #fff !important;
+}
+
+.btn-white:hover{
+  border:solid 2px #fff;
+  background: #fff;
+  color: #1f1f1f !important;
+}
+
+.glowbutton {
+  width: 150px;
+  height: 50px;
+  border-radius: 180px;
+  position: relative;
+  left: calc(50% - 75px);
+  top: calc(50% - 25px);
+  background: linear-gradient(60deg, #f79533, #f37055, #ef4e7b, #a166ab, #5073b8, #1098ad, #07b39b, #6fba82);
+  cursor: pointer;
+  line-height: 12px;
+}
+
+.glowbutton:before {
+  content: '';
+  z-index: 1;
+  position :absolute;
+  display: block;
+  width: 80%;
+  height: 70%;
+  top: 15%;
+  left: 10%;
+  transition: 0.3s opacity ease-in-out;
+  filter: blur(15px);
+  opacity: 0;
+  background: linear-gradient(60deg, #f79533, #f37055, #ef4e7b, #a166ab, #5073b8, #1098ad, #07b39b, #6fba82);
+}
+
+.glowbutton:hover:before {
+  opacity: 1;
+  transition: 0.3s opacity ease-in-out;
+  filter: blur(25px);
+  background: linear-gradient(60deg, #f79533, #f37055, #ef4e7b, #a166ab, #5073b8, #1098ad, #07b39b, #6fba82);  
+}
+
+.glowbutton:after {
+  text-align: center;
+  line-height: 40px;
+  font-size: 18px;
+  color: rgba(235,235,235,1);
+  font-weight: bold;
+  z-index: 5;
+  position: absolute;
+  display: block;
+  border-radius: 180px;
+  width: 92%;
+  height: 80%;
+  top: 10%;
+  left: 4%;  
+  background-color: rgb(19, 20, 22);
+}
+
+.glowbutton-enter:after {
+  content: 'Enter!';
+}
+
+.qr {
+  width: 320px;
+  margin: auto;
+  background-color: #EEE;
+}
+
+.card, .card-body {
+  background-color: #333;
+}
+
+.glow-box {
+
+  padding: 16px 24px;
+  position: relative;
+  border-radius: 8px;
+
+}
+
+.glow-box::after {
+    position: absolute;
+    content: "";
+    top: 15px;
+    left: 0;
+    right: 0;
+    z-index: -1;
+    height: 100%;
+    width: 100%;
+    transform: scale(0.9) translateZ(0);
+    filter: blur(15px);
+    background: linear-gradient(
+      to left,
+      #ff5770,
+      #e4428d,
+      #c42da8,
+      #9e16c3,
+      #6501de,
+      #9e16c3,
+      #c42da8,
+      #e4428d,
+      #ff5770
+    );
+    background-size: 200% 200%;
+    animation: animateGlow 1.25s linear infinite;
+}
+
+@keyframes animateGlow {
+  0% {
+    background-position: 0% 50%;
+  }
+  100% {
+    background-position: 200% 50%;
+  }
 }
