--- a/web/src/tailwind.css
+++ b/web/src/tailwind.css
@@ -13,74 +13,82 @@
 }
 
 .qr {
-    width: 320px;
-    margin: auto;
-    background-color: #EEE;
+  width: 320px;
+  margin: auto;
+  background-color: #EEE;
 }
 
 .glowbutton {
-    width: 150px;
-    height: 50px;
-    border-radius: 180px;
-    position: relative;
-    background: linear-gradient(60deg, #f79533, #f37055, #ef4e7b, #a166ab, #5073b8, #1098ad, #07b39b, #6fba82);
-    cursor: pointer;
-    line-height: 12px;
+  width: 150px;
+  height: 50px;
+  border-radius: 180px;
+  position: relative;
+  background: linear-gradient(60deg, #f79533, #f37055, #ef4e7b, #a166ab, #5073b8, #1098ad, #07b39b, #6fba82);
+  cursor: pointer;
+  line-height: 12px;
+}
+
+.glowbutton.disabled {
+  background: linear-gradient(60deg, #708090, #778899, #a9a9a9, #696969, #c0c0c0, #dcdcdc, #808080, #f4f0ec);
 }
 
 .glowbutton:before {
-    content: '';
-    z-index: 1;
-    position :absolute;
-    display: block;
-    width: 80%;
-    height: 70%;
-    top: 15%;
-    left: 10%;
-    transition: 0.3s opacity ease-in-out;
-    filter: blur(15px);
-    opacity: 0;
-    background: linear-gradient(60deg, #f79533, #f37055, #ef4e7b, #a166ab, #5073b8, #1098ad, #07b39b, #6fba82);
+  content: '';
+  z-index: 1;
+  position :absolute;
+  display: block;
+  width: 80%;
+  height: 70%;
+  top: 15%;
+  left: 10%;
+  transition: 0.3s opacity ease-in-out;
+  filter: blur(15px);
+  opacity: 0;
+}
+
+.glowbutton.disabled:hover:before {
+  background: none;
 }
 
 .glowbutton:hover:before {
-    opacity: 1;
-    transition: 0.3s opacity ease-in-out;
-    filter: blur(25px);
-    background: linear-gradient(60deg, #f79533, #f37055, #ef4e7b, #a166ab, #5073b8, #1098ad, #07b39b, #6fba82);  
+  opacity: 1;
+  transition: 0.3s opacity ease-in-out;
+  filter: blur(25px);
+  background: linear-gradient(60deg, #f79533, #f37055, #ef4e7b, #a166ab, #5073b8, #1098ad, #07b39b, #6fba82);  
+
 }
 
 .glowbutton:after {
-    text-align: center;
-    line-height: 40px;
-    font-size: 18px;
-    color: rgba(235,235,235,1);
-    font-weight: bold;
-    z-index: 5;
-    position: absolute;
-    display: block;
-    border-radius: 180px;
-    width: 92%;
-    height: 80%;
-    top: 10%;
-    left: 4%;  
-    background-color: rgb(19, 20, 22);
+  text-align: center;
+  line-height: 40px;
+  font-size: 18px;
+  color: rgba(235,235,235,1);
+  font-weight: bold;
+  z-index: 5;
+  position: absolute;
+  display: block;
+  border-radius: 180px;
+  width: 92%;
+  height: 80%;
+  top: 10%;
+  left: 4%;  
+  background-color: rgb(19, 20, 22);
 }
 
 .glowbutton-enter:after {
-    content: 'Enter!';
+  content: 'Enter!';
 }
 
 .glowbutton-create:after {
-    content: 'Create';
+  content: 'Create';
 }
 
 .glowbutton-save:after {
-    content: 'Save';
+  content: 'Save';
 }
 
 .glowbutton-copy:after {
-    content: 'Copy';
+  content: 'Copy';
 }
 
 .glowbutton-continue:after {
@@ -92,104 +100,104 @@
 }
 
 .glowbox {
-    padding: 16px 24px;
-    position: relative;
-    border-radius: 8px;
+  padding: 16px 24px;
+  position: relative;
+  border-radius: 8px;
 }
 
 .glowbox::after {
-      position: absolute;
-      content: "";
-      top: 15px;
-      left: 0;
-      right: 0;
-      z-index: -1;
-      height: 100%;
-      width: 100%;
-      transform: scale(0.9) translateZ(0);
-      filter: blur(15px);
-      background: linear-gradient(
-        to left,
-        #ff5770,
-        #e4428d,
-        #c42da8,
-        #9e16c3,
-        #6501de,
-        #9e16c3,
-        #c42da8,
-        #e4428d,
-        #ff5770
-      );
-      background-size: 200% 200%;
-      animation: animateGlow 1.25s linear infinite;
+  position: absolute;
+  content: "";
+  top: 15px;
+  left: 0;
+  right: 0;
+  z-index: -1;
+  height: 100%;
+  width: 100%;
+  transform: scale(0.9) translateZ(0);
+  filter: blur(15px);
+  background: linear-gradient(
+    to left,
+    #ff5770,
+    #e4428d,
+    #c42da8,
+    #9e16c3,
+    #6501de,
+    #9e16c3,
+    #c42da8,
+    #e4428d,
+    #ff5770
+  );
+  background-size: 200% 200%;
+  animation: animateGlow 1.25s linear infinite;
 }
 
 @keyframes animateGlow {
-    0% {
-      background-position: 0% 50%;
-    }
-    100% {
-      background-position: 200% 50%;
-    }
+  0% {
+    background-position: 0% 50%;
+  }
+  100% {
+    background-position: 200% 50%;
+  }
 }
 
 .form-group {
-    position: relative;
-    padding: 15px 0 0;
-    margin-top: 10px;
-  }
-  
-  .form-field {
-    font-family: inherit;
-    width: 100%;
-    border: 0;
-    border-bottom: 2px solid #9b9b9b;
-    outline: 0;
-    font-size: 1.3rem;
-    color: #fff;
-    padding: 7px 0;
-    background: transparent;
-    transition: border-color 0.2s;
-  }
-  
-  .form-field::placeholder {
-    color: transparent;
-  }
-  
-  .form-field:placeholder-shown ~ .form-label {
-    font-size: 1.3rem;
-    cursor: text;
-    top: 20px;
-  }
-  
-  .form-label {
-    position: absolute;
-    top: 0;
-    display: block;
-    transition: 0.2s;
-    font-size: 1rem;
-    color: #9b9b9b;
-  }
-  
-  .form-field:focus {
-    padding-bottom: 6px;  
-    font-weight: 700;
-    border-width: 3px;
-    border-image: linear-gradient(to right, #11998e,#38ef7d);
-    border-image-slice: 1;
-  }
-  
-  .form-field:focus ~ .form-label {
-    position: absolute;
-    top: 0;
-    display: block;
-    transition: 0.2s;
-    font-size: 1rem;
-    color: #11998e;
-    font-weight: 700;    
-  }
-  
-  /* Chrome, Safari, Edge, Opera */
+  position: relative;
+  padding: 15px 0 0;
+  margin-top: 10px;
+}
+
+.form-field {
+  font-family: inherit;
+  width: 100%;
+  border: 0;
+  border-bottom: 2px solid #9b9b9b;
+  outline: 0;
+  font-size: 1.3rem;
+  color: #fff;
+  padding: 7px 0;
+  background: transparent;
+  transition: border-color 0.2s;
+}
+
+.form-field::placeholder {
+  color: transparent;
+}
+
+.form-field:placeholder-shown ~ .form-label {
+  font-size: 1.3rem;
+  cursor: text;
+  top: 20px;
+}
+
+.form-label {
+  position: absolute;
+  top: 0;
+  display: block;
+  transition: 0.2s;
+  font-size: 1rem;
+  color: #9b9b9b;
+}
+
+.form-field:focus {
+  padding-bottom: 6px;  
+  font-weight: 700;
+  border-width: 3px;
+  border-image: linear-gradient(to right, #11998e,#38ef7d);
+  border-image-slice: 1;
+}
+
+.form-field:focus ~ .form-label {
+  position: absolute;
+  top: 0;
+  display: block;
+  transition: 0.2s;
+  font-size: 1rem;
+  color: #11998e;
+  font-weight: 700;    
+}
+
+/* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
