Tweaks to auction list.

--- a/web/src/app.css
+++ b/web/src/app.css
@@ -79,6 +79,10 @@
   content: 'Enter!';
 }
 
+.glowbutton-view:after {
+  content: 'View';
+}
+
 .glowbutton-create:after {
   content: 'Create';
 }
