--- a/web/src/app.css
+++ b/web/src/app.css
@@ -2,16 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-.menu-item {
-  @apply text-gray-700 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700;
-  cursor: pointer;
-}
-
-.selected-menu-item {
-  @apply text-white md:bg-transparent md:text-blue-700 md:p-0 dark:text-white;
-  cursor: pointer;
-}
-
 .qr {
   width: 320px;
   margin: auto;
@@ -83,8 +73,8 @@
   content: 'View';
 }
 
-.glowbutton-create:after {
-  content: 'Create';
+.glowbutton-new:after {
+  content: 'New';
 }
 
 .glowbutton-save:after {
