Check reserve bid and flash countdown last minute.

--- a/web/src/app.css
+++ b/web/src/app.css
@@ -139,7 +139,6 @@
   }
 }
 
-
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
@@ -150,4 +149,14 @@ input::-webkit-inner-spin-button {
 /* Firefox */
 input[type=number] {
   -moz-appearance: textfield;
+}
+
+.blink {
+  animation: blinker 0.6s linear infinite;
+}
+
+@keyframes blinker {
+  50% {
+    opacity: 0;
+  }
 }
