Verify Twitter username without creating auctions.

--- a/web/src/app.css
+++ b/web/src/app.css
@@ -84,6 +84,10 @@ body {
   content: 'Save';
 }
 
+.glowbutton-verify:after {
+  content: 'Verify';
+}
+
 .glowbutton-start:after {
   content: 'Start';
 }
