--- a/web/src/app.css
+++ b/web/src/app.css
@@ -25,7 +25,7 @@ body {
 }
 
 .avatar.not-verified::before {
-  content: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48"><path fill="rgb(255,0,0)" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m 8.4469136,4.2729534 h 5.6730014 v 9.6791676 l -0.586862,5.275517 H 9.0337759 L 8.4469136,13.952121 Z m 0,18.3091446 h 5.6730014 v 3.753449 H 8.4469136 Z"></path></svg>');
+  content: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48"><path fill="rgb(255,0,0)" d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"></path></svg>');
   position: absolute;
   z-index: 10;
   display: block;
