Instant buy auctions api and UX.

--- a/web/src/app.css
+++ b/web/src/app.css
@@ -112,6 +112,10 @@ body {
   content: 'Bid';
 }
 
+.glowbutton-buy:after {
+  content: 'Buy';
+}
+
 .glowbutton-tweet:after {
   content: 'Tweet';
 }
