--- a/web/src/app.css
+++ b/web/src/app.css
@@ -208,11 +208,11 @@ input[type=number] {
 .markdown-container h4 { font-size: 1.4rem; line-height: 1.35; letter-spacing: -.08rem; }
 .markdown-container h5 { font-size: 0.8rem; line-height: 1.5;  letter-spacing: -.05rem; }
 .markdown-container h6 { font-size: 0.5rem; line-height: 1.6;  letter-spacing: 0; }
-.markdown-container p {margin-top: 0; }
+.markdown-container p {margin-top: 0; margin-bottom: 1rem;}
 .markdown-container li {text-decoration: none;}
-.markdown-container ul { list-style: circle inside; }
-.markdown-container ol {list-style: decimal inside; }
-.markdown-container ol, ul { padding-left: 0; margin-top: 0; }
+.markdown-container ul { list-style: circle inside; margin-bottom: 1rem; }
+.markdown-container ol {list-style: decimal inside; margin-bottom: 1rem; }
+.markdown-container ol, ul { padding-left: 0; margin-top: 0; margin-bottom: 1rem; }
 .markdown-container ul ul, ul ol, ol ol, ol ul { margin: 1.5rem 0 1.5rem 3rem; font-size: 90%; }
 .markdown-container li { margin-bottom: 0.5rem; padding-left: 1rem; }
 .markdown-container code { padding: .2rem .5rem; margin: 0 .2rem; font-size: 90%; white-space: nowrap; }
@@ -223,3 +223,4 @@ input[type=number] {
 .markdown-container blockquote { padding-left: 1rem; }
 .markdown-container a { text-decoration: underline; }
 .markdown-container hr { margin-top: 1rem; margin-bottom: 1rem; border-width: 1px; border-top: 1px; }
+.markdown-container img { display: none; }
