--- a/web/src/app.css
+++ b/web/src/app.css
@@ -4,12 +4,13 @@
 
 body {
   overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 
 .qr {
   max-width: 320px;
   margin: auto;
-  background-color: #EEE;
+  background-color: #eee;
 }
 
 .avatar.verified::before {
@@ -41,15 +42,25 @@ body {
   height: 50px;
   border-radius: 180px;
   position: relative;
-  background: linear-gradient(60deg, #f79533, #f37055, #ef4e7b, #a166ab, #5073b8, #1098ad, #07b39b, #6fba82);
+  background: linear-gradient(
+    60deg,
+    #f79533,
+    #f37055,
+    #ef4e7b,
+    #a166ab,
+    #5073b8,
+    #1098ad,
+    #07b39b,
+    #6fba82
+  );
   cursor: pointer;
   line-height: 12px;
 }
 
 .glowbutton:before {
-  content: '';
+  content: "";
   z-index: 1;
-  position :absolute;
+  position: absolute;
   display: block;
   width: 96%;
   height: 90%;
@@ -64,14 +75,24 @@ body {
   opacity: 1;
   transition: 0.3s opacity ease-in-out;
   filter: blur(10px);
-  background: linear-gradient(60deg, #f79533, #f37055, #ef4e7b, #a166ab, #5073b8, #1098ad, #07b39b, #6fba82);  
+  background: linear-gradient(
+    60deg,
+    #f79533,
+    #f37055,
+    #ef4e7b,
+    #a166ab,
+    #5073b8,
+    #1098ad,
+    #07b39b,
+    #6fba82
+  );
 }
 
 .glowbutton:after {
   text-align: center;
   line-height: 40px;
   font-size: 18px;
-  color: rgba(235,235,235,1);
+  color: rgba(235, 235, 235, 1);
   font-weight: bold;
   z-index: 5;
   position: absolute;
@@ -85,55 +106,55 @@ body {
 }
 
 .glowbutton-view:after {
-  content: 'View';
+  content: "View";
 }
 
 .glowbutton-new:after {
-  content: 'New';
+  content: "New";
 }
 
 .glowbutton-auction:after {
-  content: 'Physical item';
+  content: "Physical item";
 }
 
 .glowbutton-auction-time:after {
-  content: 'My time';
+  content: "My time";
 }
 
 .glowbutton-listing:after {
-  content: 'Sell item';
+  content: "Sell item";
 }
 
 .glowbutton-save:after {
-  content: 'Save';
+  content: "Save";
 }
 
 .glowbutton-publish:after {
-  content: 'Publish';
+  content: "Publish";
 }
 
 .glowbutton-verify:after {
-  content: 'Verify';
+  content: "Verify";
 }
 
 .glowbutton-start:after {
-  content: 'Start';
+  content: "Start";
 }
 
 .glowbutton-copy:after {
-  content: 'Copy';
+  content: "Copy";
 }
 
 .glowbutton-bid:after {
-  content: 'Bid';
+  content: "Bid";
 }
 
 .glowbutton-buy:after {
-  content: 'Buy';
+  content: "Buy";
 }
 
 .glowbutton-tweet:after {
-  content: 'Tweet';
+  content: "Tweet";
 }
 
 .glowbutton-go {
@@ -141,7 +162,7 @@ body {
   height: 75px;
   line-height: 80px;
   font-size: 36px;
-  content: 'GO';
+  content: "GO";
 }
 
 .glowbutton-go:after {
@@ -151,7 +172,7 @@ body {
   left: 2%;
   line-height: 70px;
   font-size: 36px;
-  content: 'GO';
+  content: "GO";
 }
 
 .glowbox {
@@ -187,7 +208,6 @@ body {
   animation: animateGlow 1.25s linear infinite;
 }
 
-
 @keyframes animateGlow {
   0% {
     background-position: 0% 50%;
@@ -197,7 +217,6 @@ body {
   }
 }
 
-
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
@@ -206,7 +225,7 @@ input::-webkit-inner-spin-button {
 }
 
 /* Firefox */
-input[type=number] {
+input[type="number"] {
   -moz-appearance: textfield;
 }
 
@@ -221,25 +240,108 @@ input[type=number] {
 }
 
 /* Markdown Rendered Html */
-.markdown-container h1, h2, h3, h4, h5, h6 { margin-top: 0; margin-bottom: 0.5rem; }
-.markdown-container h1 { font-size: 3.0rem; line-height: 1.2;  letter-spacing: -.1rem;}
-.markdown-container h2 { font-size: 2.6rem; line-height: 1.25; letter-spacing: -.1rem; }
-.markdown-container h3 { font-size: 2.0rem; line-height: 1.3;  letter-spacing: -.1rem; }
-.markdown-container h4 { font-size: 1.4rem; line-height: 1.35; letter-spacing: -.08rem; }
-.markdown-container h5 { font-size: 0.8rem; line-height: 1.5;  letter-spacing: -.05rem; }
-.markdown-container h6 { font-size: 0.5rem; line-height: 1.6;  letter-spacing: 0; }
-.markdown-container p { margin-top: 10px; }
-.markdown-container li { text-decoration: none;}
-.markdown-container ul { list-style: circle inside; }
-.markdown-container ol { list-style: decimal inside; }
-.markdown-container ol, ul { padding-left: 0; margin-top: 0; }
-.markdown-container ul ul, ul ol, ol ol, ol ul { margin: 1.5rem 0 1.5rem 3rem; font-size: 90%; }
-.markdown-container li { margin-bottom: 0.5rem; padding-left: 1rem; }
-.markdown-container code { padding: .2rem .5rem; margin: 0 .2rem; font-size: 90%; white-space: nowrap; }
-.markdown-container pre > code { display: block; padding: 1rem 1.5rem; white-space: pre; }
-.markdown-container th, td { padding: 12px 15px; text-align: left; }
-.markdown-container th:first-child, td:first-child { padding-left: 0; }
-.markdown-container th:last-child, td:last-child { padding-right: 0; }
-.markdown-container blockquote { padding-left: 1rem; }
-.markdown-container a { text-decoration: underline; color: #ff00ff; text-decoration-thickness: .09rem; }
-.markdown-container hr { margin-top: 1rem; margin-bottom: 1rem; border-width: 1px; border-top: 1px; }
+.markdown-container h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-top: 0;
+  margin-bottom: 0.5rem;
+}
+.markdown-container h1 {
+  font-size: 3rem;
+  line-height: 1.2;
+  letter-spacing: -0.1rem;
+}
+.markdown-container h2 {
+  font-size: 2.6rem;
+  line-height: 1.25;
+  letter-spacing: -0.1rem;
+}
+.markdown-container h3 {
+  font-size: 2rem;
+  line-height: 1.3;
+  letter-spacing: -0.1rem;
+}
+.markdown-container h4 {
+  font-size: 1.4rem;
+  line-height: 1.35;
+  letter-spacing: -0.08rem;
+}
+.markdown-container h5 {
+  font-size: 0.8rem;
+  line-height: 1.5;
+  letter-spacing: -0.05rem;
+}
+.markdown-container h6 {
+  font-size: 0.5rem;
+  line-height: 1.6;
+  letter-spacing: 0;
+}
+.markdown-container p {
+  margin-top: 10px;
+}
+.markdown-container li {
+  text-decoration: none;
+}
+.markdown-container ul {
+  list-style: circle inside;
+}
+.markdown-container ol {
+  list-style: decimal inside;
+}
+.markdown-container ol,
+ul {
+  padding-left: 0;
+  margin-top: 0;
+}
+.markdown-container ul ul,
+ul ol,
+ol ol,
+ol ul {
+  margin: 1.5rem 0 1.5rem 3rem;
+  font-size: 90%;
+}
+.markdown-container li {
+  margin-bottom: 0.5rem;
+  padding-left: 1rem;
+}
+.markdown-container code {
+  padding: 0.2rem 0.5rem;
+  margin: 0 0.2rem;
+  font-size: 90%;
+  white-space: nowrap;
+}
+.markdown-container pre > code {
+  display: block;
+  padding: 1rem 1.5rem;
+  white-space: pre;
+}
+.markdown-container th,
+td {
+  padding: 12px 15px;
+  text-align: left;
+}
+.markdown-container th:first-child,
+td:first-child {
+  padding-left: 0;
+}
+.markdown-container th:last-child,
+td:last-child {
+  padding-right: 0;
+}
+.markdown-container blockquote {
+  padding-left: 1rem;
+}
+.markdown-container a {
+  text-decoration: underline;
+  color: #ff00ff;
+  text-decoration-thickness: 0.09rem;
+}
+.markdown-container hr {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  border-width: 1px;
+  border-top: 1px;
+}
